fix overflow-x: hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: 'Poppins', sans-serif;
-  overflow: overlay;
+  overflow-x: hidden;
 }
 .btnred {
   background-color: #e63946;
